--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_screenutil: ^5.9.3
   collection: ^1.19.1
+  gap: ^3.0.1
+  flutter_svg: ^2.2.3
 
 dev_dependencies:
   flutter_test:
@@ -67,10 +69,9 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+   - assets/images/
+   - assets/svgs/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
@@ -91,15 +92,15 @@ flutter:
 flutter_native_splash:
   color: "#FFFFFF"
   color_dark: "#000000"
-  image: assets/wn-logo-light.png
-  image_dark: assets/wn-logo-dark.png
+  image: assets/whitenoise-light.png
+  image_dark: assets/whitenoise-dark.png
   android: true
   ios: true
   android_12:
     color: "#FFFFFF"
     color_dark: "#000000"
-    image: assets/wn-logo-light.png
-    image_dark: assets/wn-logo-dark.png
+    image: assets/whitenoise-light.png
+    image_dark: assets/whitenoise-dark.png
   android_gravity: center
   ios_content_mode: center
   web_image_mode: center
