chore: ignore back rust/.cargo/config.toml

--- a/.gitignore
+++ b/.gitignore
@@ -52,6 +52,6 @@ app.*.map.json
 rust/tmp_docs/
 RUST_FFI_GUIDE.md
 # Generated Cargo config (auto-generated per environment)
-# rust/.cargo/config.toml (temporary, just to delete it)
+rust/.cargo/config.toml
 # Rust build artifacts (Cargo/rust-analyzer)
 target/
