--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_screenutil: ^5.9.3
   collection: ^1.19.1
   gap: ^3.0.1
+  emoji_picker_flutter: ^4.4.0
   flutter_svg: ^2.2.3
   go_router: ^17.0.0
   flutter_riverpod: ^3.2.0
