--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.9.2
+  sdk: ^3.10.3
   flutter: ">=3.38.4 <4.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
@@ -74,6 +74,10 @@ dev_dependencies:
   flutter_lints: ^6.0.0
   freezed: ^3.2.3
   build_runner: ^2.7.1
+
+  widgetbook: ^3.20.0
+  widgetbook_annotation: ^3.9.0
+  widgetbook_generator: ^3.20.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
