--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -31,8 +31,8 @@ nostr-sdk = { version = "0.43", features = [
 
 thiserror = "2.0.12"
 
-whitenoise = { version = "0.1.0", git = "https://github.com/marmot-protocol/whitenoise-rs", rev = "2a8e4721ed5c55fa039fcd0b6121a97ecf214737" }
-# whitenoise = { version = "0.1.0", path = "../../whitenoise" }
+whitenoise = { version = "0.1.0", git = "https://github.com/marmot-protocol/whitenoise-rs", rev = "c5ba75551f858f2ddc3d342e34bb63cc040ebb61" }
+# whitenoise = { version = "0.1.0", path = "../../whitenoise-rs" }
 
 [lints.rust]
 unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
