--- a/widgetbook/pubspec.yaml
+++ b/widgetbook/pubspec.yaml
@@ -26,15 +26,15 @@ flutter:
 
   # Reference assets from parent package
   assets:
-    - ../assets/images/
-    - ../assets/svgs/
+    - assets/images/
+    - assets/svgs/
 
   fonts:
     - family: Manrope
       fonts:
-        - asset: ../assets/fonts/Manrope-Regular.ttf
+        - asset: assets/fonts/Manrope-Regular.ttf
           weight: 400
-        - asset: ../assets/fonts/Manrope-SemiBold.ttf
+        - asset: assets/fonts/Manrope-SemiBold.ttf
           weight: 600
-        - asset: ../assets/fonts/Manrope-Bold.ttf
+        - asset: assets/fonts/Manrope-Bold.ttf
           weight: 700
