refactor(widgetbook): use symlink for assets to avoid package prefix
Add symlink from widgetbook/assets to parent assets directory. This
allows widgets to load SVGs without needing package: 'sloth' prefix,
simplifying asset loading across both main app and widgetbook.

--- a/widgetbook/pubspec.yaml
+++ b/widgetbook/pubspec.yaml
@@ -24,10 +24,10 @@ dev_dependencies:
 flutter:
   uses-material-design: true
 
-  # Reference assets from parent package
+  # Symlinked assets from parent package (avoids needing package: 'sloth' prefix)
   assets:
-    - ../assets/images/
-    - ../assets/svgs/
+    - assets/images/
+    - assets/svgs/
 
   fonts:
     - family: Manrope
