--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "sloth",
-    "short_name": "sloth",
+    "name": "whitenoise",
+    "short_name": "whitenoise",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
