--- a/widgetbook/linux/CMakeLists.txt
+++ b/widgetbook/linux/CMakeLists.txt
@@ -4,10 +4,10 @@ project(runner LANGUAGES CXX)
 
 # The name of the executable created for the application. Change this to change
 # the on-disk name of your application.
-set(BINARY_NAME "sloth_widgetbook")
+set(BINARY_NAME "whitenoise_widgetbook")
 # The unique GTK application identifier for this application. See:
 # https://wiki.gnome.org/HowDoI/ChooseApplicationID
-set(APPLICATION_ID "com.example.sloth_widgetbook")
+set(APPLICATION_ID "org.parres.whitenoise_widgetbook")
 
 # Explicitly opt in to modern CMake behaviors to avoid warnings with recent
 # versions of CMake.
