--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -89,13 +89,13 @@ BEGIN
     BEGIN
         BLOCK "040904e4"
         BEGIN
-            VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "sloth" "\0"
+            VALUE "CompanyName", "org.parres" "\0"
+            VALUE "FileDescription", "whitenoise" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "sloth" "\0"
-            VALUE "LegalCopyright", "Copyright (C) 2025 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "sloth.exe" "\0"
-            VALUE "ProductName", "sloth" "\0"
+            VALUE "InternalName", "whitenoise" "\0"
+            VALUE "LegalCopyright", "Copyright (C) 2025 org.parres. All rights reserved." "\0"
+            VALUE "OriginalFilename", "whitenoise.exe" "\0"
+            VALUE "ProductName", "White Noise" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
