chore: stop tracking compiled Rust .so files
Remove jniLibs from git tracking and add to .gitignore.
These are build artifacts generated by `just build-android`.

This prevents future repo bloat (~34 MB per architecture per commit).
Historical bloat will be cleaned up in a coordinated history rewrite.

--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,9 @@ app.*.map.json
 /android/app/profile
 /android/app/release
 
+# Compiled Rust native libraries (built via `just build-android`)
+/android/app/src/main/jniLibs/
+
 # FVM Version Cache
 .fvm/
 
