--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   cached_network_image: ^3.4.1
   mobile_scanner: ^7.1.4
   scroll_to_index: ^3.0.1
+  flutter_blurhash: ^0.8.2
 
 dev_dependencies:
   flutter_test:
