chore: fix gitignore comment and add .classpath to Eclipse entries

--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,8 @@ migrate_working_dir/
 *.iws
 .idea/
 
-# Eclipse/Android Studio project files
+# Eclipse project files
+.classpath
 .project
 .settings/
 
