feat(login): improve Amber login UX and fix disabled button opacity (#250)
* feat(login): improve Amber login UX and fix disabled button opacity

Rename "Login with Signer" to "Login with Amber" for clarity across
all locales. Disable the nsec login button when the field is empty
instead of keeping it always enabled. The Amber button is now always
outline style rather than swapping primary/outline based on input state.

Fix disabled button rendering to match Figma: apply 0.25 opacity to
the entire button container instead of individual color channels. The
previous per-color alpha approach made text nearly invisible in light
mode. This affects all button types (primary, outline, ghost, overlay,
destructive).

Add `just run` convenience command for running with flavor.

Closes #191

* chore: add Eclipse/Android Studio project files to gitignore

* chore: fix gitignore comment and add .classpath to Eclipse entries

* fix(button): remove disabled opacity — render disabled buttons at full opacity

* style(button): apply prefer_final_locals lint fix

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,11 @@ migrate_working_dir/
 *.iws
 .idea/
 
+# Eclipse project files
+.classpath
+.project
+.settings/
+
 .vscode/
 
 # Flutter/Dart/Pub related
