--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   cached_network_image: ^3.4.1
   mobile_scanner: ^7.1.4
   scroll_to_index: ^3.0.1
+  crypto: ^3.0.6
   flutter_local_notifications: ^19.0.0
   flutter_foreground_task: ^9.2.0
 
